<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bounds_ek3_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp">
        <!-- Auto layout, variables, and unit scale are not yet supported -->
        <ImageView
            android:id="@+id/arrow_left_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FF593C"
            android:clipToOutline="true"
            android:src="@drawable/arrow___left_2" />

        <!-- Auto layout, variables, and unit scale are not yet supported -->
        <TextView
            android:id="@+id/enter_your_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="top"
            android:text="@string/verification_msg_"
            android:textAppearance="@style/enter_your_" />
        <!-- Auto layout, variables, and unit scale are not yet supported -->
        <TextView
            android:id="@+id/hello_welco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_your_"
            android:alpha="0.7"
            android:fontFamily="@font/montserrat_bold"
            android:lineSpacingExtra="4sp"
            android:text="@string/we_have_sen"
            android:textAppearance="@style/hello_welco"
            android:textSize="16sp" />


        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hello_welco"
            android:layout_marginTop="68dp">

            <TextView
                android:id="@+id/mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="+917720840636"
                app:drawableEndCompat="@drawable/baseline_edit_24" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/pinDigit1"
                    android:layout_width="74dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="12dp"
                    android:background="#19FF7F5D"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pinDigit2"
                    android:layout_width="74dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="12dp"
                    android:background="#19FF7F5D"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pinDigit3"
                    android:layout_width="74dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="12dp"
                    android:background="#19FF7F5D"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pinDigit4"
                    android:layout_width="74dp"
                    android:layout_height="60dp"
                    android:background="#19FF7F5D"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="373dp"
            android:layout_height="60dp"
            android:layout_below="@id/layout1"
            android:layout_marginTop="40dp"
            android:background="@drawable/rectangle_background"
            android:text="Submit"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/submit"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/didntrecive"
            android:textSize="16sp" />

    </RelativeLayout>
</ScrollView>

